--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,13 @@ byteorder = "1.2"
 log = "0.4"
 num_cpus = "1.0"
 positioned-io = "0.2.2"
+rmp-serde = "0.13"
+serde = "1.0"
+serde_derive = "1.0"
+
+[dev-dependencies]
+rand = "0.4"
+simple_logger = "0.5"
 
 [patch.crates-io]
 positioned-io = { path = "/home/wspeirs/src/positioned-io" }
