Got flush working for KVS
* Got flushing of mem_table and cur_sstable into a new SSTable
* Fixed an issue with creating an SSTable that had an empty iterator
* Added unit test for SSTable and empty iterator

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["William Speirs <bill.speirs@gmail.com>"]
 
 [dependencies]
 byteorder = "1.2"
+itertools = "0.7"
 log = "0.4"
 num_cpus = "1.0"
 positioned-io = "0.2.2"
