Removed unused code and crates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["William Speirs <bill.speirs@gmail.com>"]
 byteorder = "1.2"
 itertools = "0.7"
 log = "0.4"
-num_cpus = "1.0"
+#num_cpus = "1.0"
 positioned-io = "0.2.2"
 rmp-serde = "0.13"
 serde = "1.0"
