--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ itertools = "0.7"
 log = "0.4"
 #num_cpus = "1.0"
 positioned-io = "0.2.2"
+regex = "1.0.0"
 rmp-serde = "0.13"
 serde = "1.0"
 serde_derive = "1.0"
