--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ serde_derive = "1.0"
 [dev-dependencies]
 rand = "0.4"
 simple_logger = "0.5"
+elapsed = "0.1"
 
 [patch.crates-io]
 positioned-io = { path = "/home/wspeirs/src/positioned-io" }
