Added LRU cache for reading records

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ debug = true
 byteorder = "1.2"
 itertools = "0.7"
 log = "0.4"
-#num_cpus = "1.0"
+lru-cache = "0.1"
 positioned-io = "0.2.2"
 regex = "1.0.0"
 rmp-serde = "0.13"
